[package]
name = "mix_link"
version = "0.0.5"
authors = ["David Stainton <dawuud@riseup.net>"]
description = "message oriented noise based cryptographic link layer for mixnets"
homepage = "https://github.com/sphinx-cryptography/mix_link"
repository = "https://github.com/sphinx-cryptography/mix_link"
documentation = "https://docs.rs/mix_link/"
readme = "README.md"
keywords = ["cryptography", "noise", "network", "mixnet", "link-layer"]
license = "AGPL-3.0-only"

[dependencies]
snow = "0.6.0"
ecdh_wrapper = "0.0.9"
byteorder = "1.2.2"
sphinxcrypto = "0.1.0"
subtle = { version = "2", default-features = false }

[features]
nightly = ["subtle/nightly"]
std = ["subtle/std"]

[dev-dependencies]
rustc-serialize = "0.3.24"
rand = "^0.4.2"
serde_derive = "1.0.94"
serde = "1.0.94"
serde_json = "1.0.40"
hex = "0.3.2"