[package]
name = "echo_hello_client"
version = "0.0.1"
authors = ["David Stainton <dstainton415@gmail.com>"]

[dependencies]
rand = "^0.4.2"
rustc-serialize = "0.3"
x25519-dalek-ng = { git = "https://github.com/sphinx-cryptography/x25519-dalek-ng.git", branch = "master" }
mix_link = { version = "0.2.0", path = "../.." }
arrayref = "^0.3.6"
